--- a/html/recursos.html
+++ b/html/recursos.html
@@ -12,9 +12,10 @@
 <body>
     <header>
         <a href="home.html" tabindex="0">
-            <img src="../assets/logo-programao-inclusiva.png" alt="Logo Programação Inclusiva" tabindex="0">
+            <img src="../assets/logo-programao-inclusiva.png" alt="Logo Programação Inclusiva">
+            <figcaption tabindex="0">Imagem: Logo do Site</figcaption>
         </a>
-        <nav class="header-links" role="navigation" aria-label="Menu principal" tabindex="0">
+        <nav class="header-links" role="navigation" aria-label="Menu principal">
             <ul class="header-titulos">
                 <li tabindex="0"><a href="index.html" tabindex="0">Home</a></li>
                 <li tabindex="0"><a href="barreiras.html" tabindex="0">Barreiras</a></li>
@@ -25,7 +26,7 @@
         </nav>
         <div class="accessibility-buttons">
             <button id="contrast-toggle" data-state="normal" aria-label="Ativar alto contraste">Alto Contraste</button>
-            <button id="screen-reader-toggle" aria-label="Ativar leitor de tela">Ler Página</button>
+            <button id="screen-reader-toggle" aria-label="Ativar leitor de tela">Ler Página Inteira</button>
         </div>
         <div class="font-control-buttons">
             <button id="increase-font" aria-label="Aumentar o tamanho da fonte">A+</button>
@@ -36,7 +37,7 @@
         <section class="section-container">
             <article>
                     <h1 tabindex="0">Recursos de Acessibilidade</h1>
-                <p tabindex="0">A acessibilidade digital é garantida por uma combinação de tecnologiass assistivas, práticas de design inclusivo e ferramentas específicas que ajudam a remover barreiras na web. Esses recursos são essenciais para garantir que pessoas com diferentes habilidades possam acessar e interagir com conteúdos digitais de forma autônoma.</p>
+                <p tabindex="0">A acessibilidade digital é garantida por uma combinação de Tecnologias assistivas, práticas de design inclusivo e ferramentas específicas que ajudam a remover barreiras na web. Esses recursos são essenciais para garantir que pessoas com diferentes habilidades possam acessar e interagir com conteúdos digitais de forma autônoma.</p>
                 <p tabindex="0">Nesta página, você encontrará uma visão geral dos principais recursos disponíveis para melhorar a acessibilidade em sites e aplicativos.</p>
                 <button class="read-section" aria-label="Ler esta seção">Ler Seção</button>
             </article>
@@ -44,14 +45,12 @@
         <section class="section-container">
             <div class="content-container">
                 <article class="text-side">
-
-                        <h2 tabindex="0">Ferramentas Tecnológicas</h2>
-
+                    <h2 tabindex="0">Ferramentas Tecnológicas</h2>
                     <p tabindex="0">Ferramentas tecnológicas desempenham um papel vital na acessibilidade, permitindo que sites e aplicativos sejam usados por todos. Algumas delas incluem:</p>
                     <ul>
                         <li tabindex="0"><strong>Leitores de Tela:</strong> Softwares como NVDA, JAWS e VoiceOver que permitem que pessoas cegas naveguem na web ouvindo o conteúdo textual.</li>
                         <li tabindex="0"><strong>Lupas de Tela:</strong> Ferramentas que ampliam conteúdo para pessoas com baixa visão.</li>
-                        <li tabindex="0"><strong>Sintetizadores de Voz:</strong> tecnologiass que transformam texto em áudio.</li>
+                        <li tabindex="0"><strong>Sintetizadores de Voz:</strong> Tecnologias que transformam texto em áudio.</li>
                         <li tabindex="0"><strong>Teclados Virtuais:</strong> Alternativa para pessoas com dificuldades motoras que não conseguem usar teclados físicos.</li>
                     </ul>
                     <button class="read-section" aria-label="Ler esta seção">Ler Seção</button>
@@ -69,9 +68,7 @@
                     <figcaption tabindex="0">Imagem: Mulher com dificuldade em enxergar utilizando tamanhos maiores de letras.</figcaption>
                 </figure>
                 <article class="text-side">
-
-                        <h2 tabindex="0">Práticas de Design Inclusivo</h2>
-
+                    <h2 tabindex="0">Práticas de Design Inclusivo</h2>
                     <p tabindex="0">Um design bem elaborado é fundamental para garantir a acessibilidade. Práticas importantes incluem:</p>
                     <ul>
                         <li tabindex="0"><strong>Contraste de Cores:</strong> Garante que o texto seja legível mesmo para pessoas com daltonismo ou baixa visão.</li>
@@ -99,7 +96,7 @@
         </section>
         <section class="section-container">
             <article>
-                    <h2 tabindex="0">Conclusão</h2>
+                    <h2 tabindex="0">Logo...</h2>
                 <p tabindex="0">Implementar recursos de acessibilidade em sites e aplicativos não é apenas uma responsabilidade social, mas também uma oportunidade de ampliar o alcance e impacto de conteúdos digitais. Com as ferramentas tecnológicas disponíveis e práticas de design inclusivo, é possível criar experiências digitais que sejam verdadeiramente acessíveis para todos.</p>
                 <button class="read-section" aria-label="Ler esta seção">Ler Seção</button>
             </article>
@@ -119,7 +116,7 @@
                         <li tabindex="0"><a href="barreiras.html" tabindex="0">Barreiras</a></li>
                         <li tabindex="0"><a href="importancia.html" tabindex="0">Importância</a></li>
                         <li tabindex="0"><a href="recursos.html" tabindex="0">Recursos</a></li>
-                        <li tabindex="0"><a href="tecnologias.html" tabindex="0">tecnologias</a></li>
+                        <li tabindex="0"><a href="tecnologias.html" tabindex="0">Tecnologias</a></li>
                     </ul>
                 </article>
                 <article class="footer-coluna">
@@ -134,14 +131,17 @@
             </aside>
         </section>
     </footer>
+    
     <div vw class="enabled">
         <div vw-access-button class="active"></div>
         <div vw-plugin-wrapper>
-            <div class="vw-plugin-top-wrapper"></div>
+          <div class="vw-plugin-top-wrapper"></div>
         </div>
-    </div>
+      </div>
     <script src="../js/acessibilidades.js"></script>
     <script src="https://vlibras.gov.br/app/vlibras-plugin.js"></script>
-    <script>new window.VLibras.Widget('https://vlibras.gov.br/app');</script>
+    <script>
+        new window.VLibras.Widget('https://vlibras.gov.br/app');
+    </script>
 </body>
 </html>
