--- a/html/importancia.html
+++ b/html/importancia.html
@@ -7,7 +7,7 @@
     <title>Importância - Programação Inclusiva</title>
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../css/home.css">
-    <link rel="shortcut icon" href="../assets/logo.png" type="logo.png">
+    <link rel="shortcut icon" href="../assets/logo-site.png" type="image/x-icon">
 </head>
 <body>
     <header>
